# hls-eval-internal-libs

./: .gitignore  ChangeLog.md  README.md  hie.yaml  hls-eval-internal-libs.cabal
app/: Main.hs
internals/: InternalLib.hs
