cabal-version:      1.12
name:               hls-eval-internal-libs
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/hls-eval-internal-libs#readme
bug-reports:        https://github.com/githubuser/hls-eval-internal-libs/issues
description:
    Please see the README on GitHub at <https://github.com/githubuser/hls-eval-internal-libs#readme>

build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/githubuser/hls-eval-internal-libs

library
    exposed-modules:  Lib
    hs-source-dirs:   src
    other-modules:    Paths_hls_eval_internal_libs
    default-language: Haskell2010
    build-depends:    base >=4.7 && <5

library internals
    exposed-modules: InternalLib
    hs-source-dirs:  internals
    build-depends:
        base -any

executable hls-eval-internal-libs-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_hls_eval_internal_libs
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hls-eval-internal-libs -any,
        internals -any
